<resources>
    <string name="app_name">CatatLari</string>
    <string name="title_share">Let\'s Share\nyour journey on Cadence!</string>
    <string name="hint_tanggal">tanggal</string>
    <string name="hint_jarak">jarak lari</string>
    <string name="hint_durasi">durasi</string>
    <string name="btn_save">Save</string>
    <string name="create_account">Buat Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>